# task_management_assesment

./: Cargo.toml  README.md  test.sh
src/: main.rs  state.rs
src/auth/: jwt.rs  middleware.rs  mod.rs  password.rs
src/cache/: mod.rs  task_cache.rs
src/handlers/: auth.rs  mod.rs  seed.rs  tasks.rs
src/models/: email_log.rs  login_challenge.rs  mod.rs  task.rs  user.rs
