[package]
name = "task_managment"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"

tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "macros"
] }

uuid = { version = "1", features = ["v4", "serde"] }

chrono = { version = "0.4", features = ["serde"] }

jsonwebtoken = "10"

argon2 = "0.5"

rand = "0.9"

dotenvy = "0.15"

tower = "0.5"

tower-http = { version = "0.6", features = ["cors", "trace"] }

tracing = "0.1"

tracing-subscriber = { version = "0.3", features = ["env-filter"] }

anyhow = "1"

thiserror = "2"

async-trait = "0.1"

dashmap = "6"

hyper = "1"